--- a/index.html
+++ b/index.html
@@ -2675,7 +2675,7 @@
         legend.append("text").attr("x", -8).attr("y", 8).attr("text-anchor", "end").attr("fill", function(d_){ return d_.color; }).text(function(d_){ return parameters.format(d_.value) + " " + parameters.units; })
         legend.append("text").attr("x", 18).attr("y", 8).attr("text-anchor", "start").attr("fill", function(d_){ return d_.color; }).text(function(d_){ return setAlias(d_.data.name); })
         
-        saveSvg("Portfolio_" + data_.id + ".svg");
+        //saveSvg("Portfolio_" + data_.id + ".svg");
 
     }
       
