--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         height: 724,
         offset: 32,
         units: "USD",
+        total: 0,
         titlePosition: {cx: 0.5, cy: 0.33 },
         format: d3.format(",.2f"), 
         format2: d3.format(".2n"), //sagnificant figures
@@ -103,7 +104,7 @@
             .right(data_.Right)
             .setup();
 
-        var path, dots, label, guider, cloud, header, parent;
+        var path, dots, label, guider, cloud, header, parent, total = data_["Left"].checksum + data_["Right"].checksum;
         
         var left = svg.append("g").attr("transform", "translate(" + data_.Left.dx + "," + (data_.Left.dy) + ")").attr("class", "donut").attr("id", "Left");
         var right = svg.append("g").attr("transform", "translate(" + data_.Right.dx + "," + (data_.Right.dy) + ")").attr("class", "donut").attr("id", "Right");
@@ -128,7 +129,7 @@
                 div.transition()
                 .duration(200)
                 .style("opacity", 0.8);
-                div.html(setAlias(d_.data.name) + ": " + parameters.format(d_.value) + " " + parameters.units + " (" + parameters.format2(d_.value / data_[id].checksum * 100) + "%)")
+                div.html(setAlias(d_.data.name) + ": " + parameters.format(d_.value) + " " + parameters.units + " (" + parameters.format2(d_.value / total * 100) + "%)")
                 .style("left", (d3.event.pageX) + "px")
                 .style("top", (d3.event.pageY - 28) + "px")
                 .style("border", "solid 2px " + d_.color);
