--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         proportional = d3.proportional()
             .size([parameters.width, parameters.height * 0.65])
             .rightLabelXOffset(6.0)
+            .fixed(true)
             .leftOffset(0.35)
             .rightOffset(0.60)
             .colorsLeft(parameters.grayscale)
@@ -103,7 +104,7 @@
             .left(data_.Left)
             .right(data_.Right)
             .setup();
-
+        
         var path, dots, label, guider, cloud, header, parent, total = data_["Left"].checksum + data_["Right"].checksum;
         
         var left = svg.append("g").attr("transform", "translate(" + data_.Left.dx + "," + (data_.Left.dy) + ")").attr("class", "donut").attr("id", "Left");
